修改菜单图标
Former-commit-id: ca2d0e82be351509c308fe8fbcb2320765e265f2

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,7 +1,6 @@
 {
    "closeconf" : {
-      "colse" : 2,
-      "tip" : false
+      "colse" : 2
    },
    "darkcoin" : {
       "SendBuyerCancelnFee" : 43571,
@@ -9,33 +8,6 @@
       "SendBuyernFee" : 33670,
       "SendSellernFee" : 38606
    },
-   "listapp" : [
-      {
-         "appid" : "223-1",
-         "name" : "223-1 ≤¬ƒ„√√V1",
-         "nameen" : "223-1 Guess who V1"
-      },
-      {
-         "appid" : "29283-1",
-         "name" : "29283-1 ≤¬ƒ„√√V2",
-         "nameen" : "29283-1 Guess who V2"
-      },
-      {
-         "appid" : "298-1",
-         "name" : "298 «¿∫Ï∞¸V1",
-         "nameen" : "298 Gifts V1"
-      },
-      {
-         "appid" : "29282-1",
-         "name" : "29282-1 «¿∫Ï∞¸V2",
-         "nameen" : "29282-1 Gifts V2"
-      },
-      {
-         "appid" : "50725-1",
-         "name" : "50725-1 IPO¡Ï±“V1",
-         "nameen" : "50725-1 IPO shares V1"
-      }
-   ],
    "logcfg" : {
       "log_flag" : 1,
       "print_fileline" : 1,
@@ -64,11 +36,11 @@
       "redpacketscript" : "29282-1"
    },
    "p2pbet" : {
-      "AcceptBetnFee" : 10895,
-      "GetAppAmountnFee" : 10845,
-      "GetRechangeFee" : 10326,
-      "OpenBetnFee" : 10845,
-      "SendBetFee" : 10639
+      "AcceptBetnFee" : 99500,
+      "GetAppAmountnFee" : 94500,
+      "GetRechangeFee" : 42600,
+      "OpenBetnFee" : 94500,
+      "SendBetFee" : 73900
    },
    "p2pbetstep" : {
       "Acceptstep" : 89407,
@@ -78,10 +50,10 @@
       "SendBetstep" : 63806
    },
    "redpacket" : {
-      "acceptredcommFee" : 11801,
-      "acceptredspecalFee" : 19601,
-      "sendredcommFee" : 28001,
-      "sendredspecalFee" : 14801
+      "acceptredcommFee" : 190100,
+      "acceptredspecalFee" : 970100,
+      "sendredcommFee" : 1810100,
+      "sendredspecalFee" : 490100
    },
    "redpacketstep" : {
       "acceptredcommstep" : 180000,
@@ -153,7 +125,7 @@
    "script" : {
       "betscript" : "29283-1",
       "darkscript" : "3-1",
-      "iposcript" : "50725-1",
+      "iposcript" : "97792-1",
       "redpacketscript" : "29282-1"
    }
 }
