--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,7 +1,7 @@
 [QUpdater]
 LicenseCode=8031-AD60E8
 QuickCheck=false
-Langage=qupdatercn.lan
+Langage=QUpdateren.lan
 CheckLostFile=true
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
