--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -57,7 +57,7 @@ PROGSTATUS_TEST=Test
 PROGSTATUS_NETWORK_SYNING=Synchronizing with network...
 PROGSTATUS_NETWORK_SYN=Up to date.
 PROGSTATUS_SURPLUS=Remaining                            
-PROGSTATUS_SYNLOCAL=Blocks of transaction  has  not been  locally synchronized yet 
+PROGSTATUS_SYNLOCAL=Blocks download
 PROGSTATUS_CURRENT_HEIGHT=Current block height
 PROGSTATUS_NET=Network
 
