1.修改链接中英文配置文件. 3.修改配置文件
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 8f642ee4dce51758f959e55c74159752e7e46530

--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -128,7 +128,7 @@ TRAD_TRAN_HAIR=Transaction <sent>
 TRAD_TRAN=Transaction  
 TRAD_REGISTER=Register
 TRAD_NOT_RECORD_OUT=No records can be exported
-TRAD_RECORD=Tradingrecord
+TRAD_RECORD=Traderecord
 TRAD_NOT_OFFICE=Perhaps you have not installed office, which leads to a failure of creation 
 TRAD_BEGIN_PAGE=The first page already! 
 TRAD_END_PAGE=The final page already!
@@ -395,7 +395,7 @@ MENU_SETAPPID=Set application ID
 MENU_SET=Set
 MENU_RESTORY=Restore default
 MENU_HISTORYRECORD=Export history records 
-MENU_SENDBET=Launching orders of Guess Who 
+MENU_SENDBET=Launch orders of Guess Who 
 MENU_ACCEPTET=Taken orders of Guess Who
 MENU_SENDRED=sponsored
 MENU_GRABRED=grabed
