--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,6 +1,7 @@
 {
    "closeconf" : {
-      "colse" : 2
+      "colse" : 2,
+      "tip" : false
    },
    "darkcoin" : {
       "SendBuyerCancelnFee" : 43571,
@@ -8,8 +9,40 @@
       "SendBuyernFee" : 33670,
       "SendSellernFee" : 38606
    },
+   "help" : {
+      "helpcn" : "http://www.dacrs.com/forum.php?mod=viewthread&tid=3487&extra=page%3D1",
+      "helpen" : "http://www.dacrs.com/forum.php?mod=viewthread&tid=3487&extra=page%3D1"
+   },
+   "listapp" : [
+      {
+         "appid" : "223-1",
+         "name" : "223-1 猜你妹V1",
+         "nameen" : "223-1 Guess who V1"
+      },
+      {
+         "appid" : "29283-1",
+         "name" : "29283-1 猜你妹V2",
+         "nameen" : "29283-1 Guess who V2"
+      },
+      {
+         "appid" : "298-1",
+         "name" : "298 抢红包V1",
+         "nameen" : "298 Gifts V1"
+      },
+      {
+         "appid" : "29282-1",
+         "name" : "29282-1 抢红包V2",
+         "nameen" : "29282-1 Gifts V2"
+      },
+      {
+         "appid" : "50725-1",
+         "name" : "50725-1 IPO领币V1",
+         "nameen" : "50725-1 IPO shares V1"
+      }
+   ],
    "logcfg" : {
       "log_flag" : 1,
+      "max_size" : 100,
       "print_fileline" : 1,
       "print_timestamps" : 1,
       "tags" : [
@@ -36,11 +69,11 @@
       "redpacketscript" : "29282-1"
    },
    "p2pbet" : {
-      "AcceptBetnFee" : 99500,
-      "GetAppAmountnFee" : 94500,
-      "GetRechangeFee" : 42600,
-      "OpenBetnFee" : 94500,
-      "SendBetFee" : 73900
+      "AcceptBetnFee" : 10895,
+      "GetAppAmountnFee" : 10845,
+      "GetRechangeFee" : 10326,
+      "OpenBetnFee" : 10845,
+      "SendBetFee" : 10639
    },
    "p2pbetstep" : {
       "Acceptstep" : 89407,
@@ -50,10 +83,10 @@
       "SendBetstep" : 63806
    },
    "redpacket" : {
-      "acceptredcommFee" : 190100,
-      "acceptredspecalFee" : 970100,
-      "sendredcommFee" : 1810100,
-      "sendredspecalFee" : 490100
+      "acceptredcommFee" : 11801,
+      "acceptredspecalFee" : 19601,
+      "sendredcommFee" : 28001,
+      "sendredspecalFee" : 14801
    },
    "redpacketstep" : {
       "acceptredcommstep" : 180000,
@@ -125,7 +158,7 @@
    "script" : {
       "betscript" : "29283-1",
       "darkscript" : "3-1",
-      "iposcript" : "97792-1",
+      "iposcript" : "50725-1",
       "redpacketscript" : "29282-1"
    }
 }
