--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -244,6 +244,7 @@ P2P_BET_NO_LOTTERY=Part of the bet contract not announced, deposit first please.
 P2P_BET_CANCEL_ORDER=Cancel All order
 P2P_BET_UPDATA=Guess your younger girl has been upgraded, please go to the menu bar, select the restore default Settings
 P2P_SET_ACCEPTAMOUNT=Set the amount of orders
+P2P_SET_ACCEPTAMOUNTRANGE=Our main order amount must be in 0 ~ 1.1 times of the amount
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
