1.添加提示语句
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: c26810188b79150e1d845a78c2e212be5741f536

--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -242,7 +242,8 @@ P2P_BET_NO_LOTTERY=有些竞猜未开奖,请先充值
 P2P_BET_CANCEL_ORDER=一键取消订单
 P2P_BET_UPDATA=猜你妹已经升级,请到菜单栏中选择恢复默认设置
 P2P_SET_ACCEPTAMOUNT=设置接单金额
-P2P_SET_ACCEPTAMOUNTRANGE=接单金额范围必须在0~发单金额的1.1倍
+P2P_SET_ACCEPTAMOUNTRANGE=接单金额范围必须在0~投注金1.1倍
+P2P_SET_RECHANGEMONEY=充值金额大于账户余额
 
 [MORTTARD_MODULE] ;抵押模块
 MORTTARD_GENERAL_ENVELOPE=普通红包
