1.修改提示语句
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 3b50a01e98cd013e560ddd5721d3ac1974da633a

--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -435,7 +435,7 @@ PASS_MODIYWORD_STATICCOMFIRED=确认新密码:
 [DACRSU]
 DACRSU_FILEPATH=程序不可以放在含有空格的目录下
 DACRSU_PROJECTRUN=程序已经在运行了
-DACRSU_CLOSTIP=猜你妹有些单还未接赌或开奖,关闭系统已接赌超时未开奖\r\n自动判输,是否关闭
+DACRSU_CLOSTIP=猜你妹有些单还未接赌或开奖,关闭系统已接赌超时未开奖,自动判输,是否关闭
 DACRSU_PATHNOTNULL=路径不能为空
 DACRSU_INSTEAD=此文件已经存在是否要覆盖
 DACRSU_BACK=钱包备份成功
