修改升级配置
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: e1a5ba5a5b9e4040b961c79aeb080a28bed31dcc

--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,7 +1,7 @@
 [QUpdater]
 LicenseCode=8031-AD60E8
 QuickCheck=false
-Langage=QUpdatercn.lan
+Langage=QUpdateren.lan
 CheckLostFile=true
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
