1.修改配置文件
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 86813443320f99ed9744dca8e965a138dd0f084a

--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -172,7 +172,7 @@ TRAD_COLD_PUBLICKEY=Public key of cold mining
 TRAD_TIP=Tip
 TRAD_TRAN_TIMEOUT_HEIGHT=Height of transaction  timeouts 
 TRAD_OK_HEIGHT=Confirm the height
-TRAD_OK_TIME=Confirm the time
+TRAD_OK_TIME=Confirm time
 TRAD_OK_BLOCK=Confirm the blockhash
 TRAD_OK_NUM=Confirms
 TRAD_TRADMONEY=Amount of the transaction
