--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -16,27 +16,27 @@
    "listapp" : [
       {
          "appid" : "223-1",
-         "name" : "223-1 çŒœä½ å¦¹V1",
+         "name" : "223-1 ²ÂÄãÃÃV1",
          "nameen" : "223-1 Guess who V1"
       },
       {
          "appid" : "29283-1",
-         "name" : "29283-1 çŒœä½ å¦¹V2",
+         "name" : "29283-1 ²ÂÄãÃÃV2",
          "nameen" : "29283-1 Guess who V2"
       },
       {
          "appid" : "298-1",
-         "name" : "298 æŠ¢çº¢åŒ…V1",
+         "name" : "298 ÇÀºì°üV1",
          "nameen" : "298 Gifts V1"
       },
       {
          "appid" : "29282-1",
-         "name" : "29282-1 æŠ¢çº¢åŒ…V2",
+         "name" : "29282-1 ÇÀºì°üV2",
          "nameen" : "29282-1 Gifts V2"
       },
       {
          "appid" : "50725-1",
-         "name" : "50725-1 IPOé¢†å¸V1",
+         "name" : "50725-1 IPOÁì±ÒV1",
          "nameen" : "50725-1 IPO shares V1"
       }
    ],
