1.添加应用添加英文背景图片
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: e0f26e810223204dcf0709ae990032c9880dc156

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -219,6 +219,7 @@
     <None Include="res\more3.bmp" />
     <None Include="res\Mortgage.bmp" />
     <None Include="res\mort_dlg.bmp" />
+    <None Include="res\mort_dlgen.bmp" />
     <None Include="res\nemu.bmp" />
     <None Include="res\newaddr-1.bmp" />
     <None Include="res\newaddr-2.bmp" />
