--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -245,6 +245,7 @@ P2P_BET_CANCEL_ORDER=Cancel All order
 P2P_BET_UPDATA=Guess your younger girl has been upgraded, please go to the menu bar, select the restore default Settings
 P2P_SET_ACCEPTAMOUNT=Set the amount of orders
 P2P_SET_ACCEPTAMOUNTRANGE=Our main order amount must be in 0 ~ 1.1 times of the amount
+P2P_SET_RECHANGEMONEY=The amount of top-up amount is greater than the account
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
