--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -212,8 +212,8 @@ P2P_ORDERS_MORE_BALANCE=Order receiving  amount exceeds  balance
 P2P_WITHDRAWALS_MORE_BALANCE=Withdrawal amount is greater than the amount of account.
 P2P_BET_MONEY_MORE_100=Bet amount must be more than 100
 P2P_BET_MONEY_MORE_1=Bet amount must be more than 1
-P2P_SENDSIS_MONEY=Are you sure to select a girl--->with amount of:
-P2P_SENDBRO_MONEY=Are you sure to select a boy--->amount
+P2P_SENDSIS_MONEY=selcect girl with amount
+P2P_SENDBRO_MONEY=selcect boy with amount
 P2P_THIS_ALONE_OK=The order has been taken
 P2P_THIS_ALONE_NOT=The order does not exist
 P2P_TOTAL_PROFIT_LOSS=Total profit
@@ -244,7 +244,7 @@ P2P_BET_NO_LOTTERY=Part of the bet contract not announced, deposit first please.
 P2P_BET_CANCEL_ORDER=Cancel All order
 P2P_BET_UPDATA=Guess your younger girl has been upgraded, please go to the menu bar, select the restore default Settings
 P2P_SET_ACCEPTAMOUNT=Set the amount of orders
-P2P_SET_ACCEPTAMOUNTRANGE=Our main order amount must be in 0 ~ 1.1 times of the amount
+P2P_SET_ACCEPTAMOUNTRANGE=the amount of orders must be less than 1.1 times the amount of launching
 P2P_SET_RECHANGEMONEY=Recharge amount is greater than the account balance
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
