--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -222,7 +222,7 @@ P2P_INPUT_ERROR=Error, input digit please
 P2P_QUIZ_TRAD_ID=Quiz transaction ID
 P2P_NOT_CANCEL_ORDER=There is no order to be canceled
 P2P_NOT_ACTI_ADDRESS=There is no address activated
-P2P_ORDER_NOT_QX=Part of the orders has been taken, can not be canceled 
+P2P_ORDER_NOT_QX=Part of the orders has been taken, can not be canceled. 
 P2P_ORDER_NOT_CZZQX=And part of the orders cannot  be canceled, deposit and try it again.
 P2P_ORDER_NOT_BFCZZQX=Part of the orders can not be canceled, deposit and try it again.
 P2P_ORDER_OK=Congratulations! You  have canceled all orders.
