1.计算盈亏的bug以及翻译
Signed-off-by: bille <bille@dacrs.com>

Former-commit-id: ee3d4ca5c3defd4a91f68d15d537f4bb304d3fbf

--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -403,7 +403,7 @@ MENU_ENL=英文
 MENU_CLOSEPOP=关闭提示
 [GUESS_DILOG]    ;选择猜你妹
 GUESS_NUMBER=猜哥妹
-
+GUESS_NUMBER01=猜
 
 [GUESS_SISTERLIST]    ;选择猜你妹
 GUESS_SISTERLIST_HEAD=猜你妹列表
