--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -406,6 +406,8 @@ MENU_CNL=Simplified Chinese
 MENU_ENL=English
 MENU_CLOSEPOP=Close tips
 [GUESS_DILOG]    ;—°‘Ò≤¬ƒ„√√
+GUESS_NUMBER=Guess girl or boy
+GUESS_NUMBER01=Guess
 
 [GUESS_SISTERLIST]    ;—°‘Ò≤¬ƒ„√√
 GUESS_SISTERLIST_HEAD=Guess who Transactions 
