1.添加猜你妹的 id
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: f51bfeb5e0e2b1ebb1b28d536c3d4ee94a3b3cbf

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,6 +1,6 @@
 {
    "closeconf" : {
-      "colse" : 2,
+      "colse" : 0,
       "tip" : false
    },
    "darkcoin" : {
@@ -23,6 +23,11 @@
          "appid" : "29283-1",
          "name" : "29283-1 ≤¬ƒ„√√V2",
          "nameen" : "29283-1 Guess who V2"
+      },
+	  {
+         "appid" : "117303-1",
+         "name" : "117303-1 ≤¬ƒ„√√V3",
+         "nameen" : "117303-1 Guess who V3"
       },
       {
          "appid" : "298-1",
@@ -64,7 +69,7 @@
       "server_ui_port" : "12345"
    },
    "newestscript" : {
-      "betscript" : "29283-1",
+      "betscript" : "117303-1",
       "iposcript" : "97792-1",
       "redpacketscript" : "29282-1"
    },
@@ -156,7 +161,7 @@
       "walletpassphrasechange" : "walletpassphrasechange"
    },
    "script" : {
-      "betscript" : "29283-1",
+      "betscript" : "117303-1",
       "darkscript" : "3-1",
       "iposcript" : "97792-1",
       "redpacketscript" : "29282-1"
