--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,7 +1,7 @@
 {
    "closeconf" : {
       "colse" : 0,
-      "tip" : false
+      "tip" : true
    },
    "darkcoin" : {
       "SendBuyerCancelnFee" : 43571,
@@ -24,8 +24,8 @@
          "name" : "29283-1 ≤¬ƒ„√√V2",
          "nameen" : "29283-1 Guess who V2"
       },
-	  {
-         "appid" : "117303-1",
+      {
+         "appid" :"117303-1",
          "name" : "117303-1 ≤¬ƒ„√√V3",
          "nameen" : "117303-1 Guess who V3"
       },
