--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -3,6 +3,7 @@ LicenseCode=8031-AD60E8
 QuickCheck=false
 Langage=QUpdateren.lan
 CheckLostFile=true
+AutoNext=0
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
