--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -1221,6 +1221,9 @@
     <None Include="res\mort_dlgen.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="..\..\dacrs_ui_test\bin\db\data.db">
+      <Filter>源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
