--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -512,7 +512,8 @@ SETAPPFEE_GUEEOR=猜你妹AppID格式不正确
 SETAPPFEE_GIFTERROR=抢红包AppID格式不正确
 SETAPPFEE_IPOERROR=IPO AppID格式不正确
 SETAPPFEE_LANGAGE=修改语言坏境请重新启动钱包
-
+SETAPPFEE_PER=请设置百分比
+SETAPPFEE_SETPER=百分比范围必须在0-110之间
 
 
 
