--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -517,3 +517,6 @@ SETAPPFEE_GUEEOR=Quizzes AppID format is not correct
 SETAPPFEE_GIFTERROR=Grab a red envelope AppID format is not correct
 SETAPPFEE_IPOERROR=IPO AppID format is not correct
 SETAPPFEE_LANGAGE=Modify the language environment, please restart your wallet
+SETAPPFEE_PER=Please set the percentage
+SETAPPFEE_SETPER=Must be between 0-110 percent range
+
