--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -284,6 +284,7 @@
     <None Include="res\sister_1.bmp" />
     <None Include="res\sister_2.bmp" />
     <None Include="res\sister_3.bmp" />
+    <None Include="res\splite.bmp" />
     <None Include="res\target.bmp" />
     <None Include="res\Tip.bmp" />
     <None Include="res\tip_icon.bmp" />
@@ -340,6 +341,7 @@
     <ClInclude Include="CWorksheet.h" />
     <ClInclude Include="CWorksheets.h" />
     <ClInclude Include="DialogBase.h" />
+    <ClInclude Include="DisplayApp.h" />
     <ClInclude Include="DlgDocument.h" />
     <ClInclude Include="DlgView.h" />
     <ClInclude Include="EncryptWallet.h" />
@@ -355,6 +357,7 @@
     <ClInclude Include="NewSendAddr.h" />
     <ClInclude Include="Out.h" />
     <ClInclude Include="OutGifDlg.h" />
+    <ClInclude Include="P2pTip.h" />
     <ClInclude Include="ReCharge.h" />
     <ClInclude Include="RecordListBox.h" />
     <ClInclude Include="RedPacketList.h" />
@@ -449,6 +452,7 @@
     <ClCompile Include="DacrsUIDB.cpp" />
     <ClCompile Include="DacrsUIDlg.cpp" />
     <ClCompile Include="DialogBase.cpp" />
+    <ClCompile Include="DisplayApp.cpp" />
     <ClCompile Include="DlgDocument.cpp" />
     <ClCompile Include="DlgView.cpp" />
     <ClCompile Include="EncryptWallet.cpp" />
@@ -486,6 +490,7 @@
     <ClCompile Include="Out.cpp" />
     <ClCompile Include="OutGifDlg.cpp" />
     <ClCompile Include="P2PDlg.cpp" />
+    <ClCompile Include="P2pTip.cpp" />
     <ClCompile Include="PostMsg.cpp" />
     <ClCompile Include="ProgStatusBar.cpp" />
     <ClCompile Include="ReceiveDlg.cpp" />
