--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -242,8 +242,11 @@ P2P_BET_NO_LOTTERY=有些竞猜未开奖,请先充值
 P2P_BET_CANCEL_ORDER=一键取消订单
 P2P_BET_UPDATA=猜你妹已经升级,请到菜单栏中选择恢复默认设置
 P2P_SET_ACCEPTAMOUNT=设置接单金额
-P2P_SET_ACCEPTAMOUNTRANGE=接单金额范围必须在0~发单金额的1.1倍
+P2P_SET_ACCEPTAMOUNTRANGE=接单金额设置范围为发单金额的0-1.1倍
 P2P_SET_RECHANGEMONEY=充值金额大于账户金额
+P2P_BET_SEND_MONEY=投注金额
+P2P_BET_AUTO_SENDBET=设置自动投注
+P2P_BET_CANCEL_SENDBET=取消自动投注
 
 [MORTTARD_MODULE] ;抵押模块
 MORTTARD_GENERAL_ENVELOPE=普通红包
@@ -512,19 +515,5 @@ SETAPPFEE_GUEEOR=猜你妹AppID格式不正确
 SETAPPFEE_GIFTERROR=抢红包AppID格式不正确
 SETAPPFEE_IPOERROR=IPO AppID格式不正确
 SETAPPFEE_LANGAGE=修改语言坏境请重新启动钱包
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+SETAPPFEE_PER=请设置百分比
+SETAPPFEE_SETPER=百分比范围必须在0-110之间
