--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -244,8 +244,11 @@ P2P_BET_NO_LOTTERY=Part of the bet contract not announced, deposit first please.
 P2P_BET_CANCEL_ORDER=Cancel All order
 P2P_BET_UPDATA=Guess your younger girl has been upgraded, please go to the menu bar, select the restore default Settings
 P2P_SET_ACCEPTAMOUNT=Set the amount of orders
-P2P_SET_ACCEPTAMOUNTRANGE=the amount of orders must be less than 1.1 times the amount of launching
+P2P_SET_ACCEPTAMOUNTRANGE=Order amount set range to 0-1.1 times that of the issuance of amount
 P2P_SET_RECHANGEMONEY=Recharge amount is greater than the account balance
+P2P_BET_SEND_MONEY=Bet amount
+P2P_BET_AUTO_SENDBET=automatic bet
+P2P_BET_CANCEL_SENDBET=CANCEL automatic bet
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
@@ -517,3 +520,6 @@ SETAPPFEE_GUEEOR=Quizzes AppID format is not correct
 SETAPPFEE_GIFTERROR=Grab a red envelope AppID format is not correct
 SETAPPFEE_IPOERROR=IPO AppID format is not correct
 SETAPPFEE_LANGAGE=Modify the language environment, please restart your wallet
+SETAPPFEE_PER=Please set the percentage
+SETAPPFEE_SETPER=Must be between 0-110 percent range
+
