--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -247,6 +247,7 @@ P2P_SET_RECHANGEMONEY=充值金额大于账户金额
 P2P_BET_SEND_MONEY=投注金额
 P2P_BET_AUTO_SENDBET=设置自动投注
 P2P_BET_CANCEL_SENDBET=取消自动投注
+P2P_BET_ATUTOBET_TIPS=自动发单已设置成功,请确保账户ID中有足够的金额
 
 [MORTTARD_MODULE] ;抵押模块
 MORTTARD_GENERAL_ENVELOPE=普通红包
