--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -248,7 +248,8 @@ P2P_SET_ACCEPTAMOUNTRANGE=Order amount set range to 0-1.1 times that of the issu
 P2P_SET_RECHANGEMONEY=Recharge amount is greater than the account balance
 P2P_BET_SEND_MONEY=Bet amount
 P2P_BET_AUTO_SENDBET=automatic bet
-P2P_BET_CANCEL_SENDBET=CANCEL automatic bet
+P2P_BET_CANCEL_SENDBET=Cancel automatic bet
+P2P_BET_ATUTOBET_TIPS=Automatically releases has been set up successfully, please make sure have enough amount in the account ID
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
