1.点击猜你妹的哥必须要大于100. 2.接普通红包最好一个红包添加配置文件的步骤
Signed-off-by: bess <776536184@qq.com>

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -43,6 +43,16 @@
          "appid" : "97792-1",
          "name" : "97792-1 IPO¡Ï±“V3",
          "nameen" : "97792-1 IPO shares V3"
+      },
+      {
+         "appid" : "159329-1",
+         "name" : "159329-1 P2P Ã‘±¶V1",
+         "nameen" : "159329-1 P2P SHOPV1"
+      }
+   ],
+   "listappid" : [
+      {
+         "appid" : "159329-1"
       }
    ],
    "logcfg" : {
@@ -88,13 +98,13 @@
       "SendBetstep" : 63806
    },
    "redpacket" : {
-      "acceptredcommFee" : 11801,
+      "acceptredcommFee" : 61801,
       "acceptredspecalFee" : 19601,
       "sendredcommFee" : 28001,
       "sendredspecalFee" : 14801
    },
    "redpacketstep" : {
-      "acceptredcommstep" : 180000,
+      "acceptredcommstep" : 680000,
       "acceptredspecalstep" : 960000,
       "sendredcommstep" : 1800000,
       "sendredspecalstep" : 480000
@@ -165,5 +175,5 @@
       "darkscript" : "3-1",
       "iposcript" : "97792-1",
       "redpacketscript" : "29282-1"
-   } 
+   }
 }
