将之前的qupdater.exe更换成updater.exe的升级方式 DacrUI的加载方式改变

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -10,8 +10,8 @@
       "SendSellernFee" : 38606
    },
    "help" : {
-      "helpcn" : "http://www.dacrs.com/forum.php?mod=viewthread&tid=3487&extra=page%3D1",
-      "helpen" : "http://www.dacrs.com/forum.php?mod=viewthread&tid=3487&extra=page%3D1"
+      "helpcn" : "http://8btc.com/thread-19486-1-1.html",
+      "helpen" : "http://8btc.com/thread-19486-1-1.html"
    },
    "listapp" : [
       {
@@ -76,7 +76,7 @@
       "rpc_port" : "18332",
       "rpc_user" : "smartcoin",
       "server_ip" : "127.0.0.1",
-      "server_ui_port" : "12345"
+      "server_ui_port" : "4246"
    },
    "newestscript" : {
       "betscript" : "117303-1",
@@ -98,13 +98,13 @@
       "SendBetstep" : 63806
    },
    "redpacket" : {
-      "acceptredcommFee" : 61801,
+      "acceptredcommFee" : 11801,
       "acceptredspecalFee" : 19601,
       "sendredcommFee" : 28001,
       "sendredspecalFee" : 14801
    },
    "redpacketstep" : {
-      "acceptredcommstep" : 680000,
+      "acceptredcommstep" : 180000,
       "acceptredspecalstep" : 960000,
       "sendredcommstep" : 1800000,
       "sendredspecalstep" : 480000
@@ -114,6 +114,7 @@
       "backupwallet" : "backupwallet",
       "createcontracttx" : "createcontracttx",
       "createcontracttxraw" : "createcontracttxraw",
+      "dispersebalance" : "dispersebalance",
       "dumpprivkey" : "dumpprivkey",
       "dumpwallet" : "dumpwallet",
       "encryptwallet" : "encryptwallet",
@@ -121,7 +122,9 @@
       "getaccountinfo" : "getaccountinfo",
       "getaddednodeinfo" : "getaddednodeinfo",
       "getappaccinfo" : "getappaccinfo",
+      "getappinfo" : "getappinfo",
       "getappkeyvalue" : "getappkeyvalue",
+      "getassets" : "getassets",
       "getbalance" : "getbalance",
       "getbestblockhash" : "getbestblockhash",
       "getblock" : "getblock",
@@ -139,6 +142,7 @@
       "getpeerinfo" : "getpeerinfo",
       "getrawmempool" : "getrawmempool",
       "getscriptdata" : "getscriptdata",
+      "gettotalassets" : "gettotalassets",
       "gettxdetail" : "gettxdetail",
       "getwalletinfo" : "getwalletinfo",
       "help" : "help",
@@ -149,6 +153,7 @@
       "listtx" : "listtx",
       "listtxcache" : "listtxcache",
       "listunconfirmedtx" : "listunconfirmedtx",
+      "notionalpoolingbalance" : "notionalpoolingbalance",
       "ping" : "ping",
       "prepareforcoolmining" : "prepareforcoolmining",
       "registaccounttx" : "registaccounttx",
