--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,9 +1,8 @@
 [QUpdater]
 LicenseCode=8031-AD60E8
 QuickCheck=false
-Langage=QUpdateren.lan
+Langage=QUpdatercn.lan
 CheckLostFile=true
-AutoNext=0
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
