--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -2,7 +2,7 @@ rpcuser=smartcoin
 rpcpassword=admin
 blockminsize=1000
 debug=ERROR
-#debug=vm
+debug=vm
 #debug=NOUI
 #debug=TOUI
 debug=INFO
@@ -15,7 +15,7 @@ logprintfileline=1
 listen=1
 server=1
 rpcport=18332
-uiport=12345
+uiport=4246
 appid=29283-1
 appid=29282-1
 appid=223-1
@@ -23,6 +23,8 @@ appid=298-1
 appid=76685-1
 appid=97792-1
 appid=117303-1
+appid=117303-1
+appid=159329-1
 gen=1
 genproclimit=1000000
 logmaxsize=100
